# set-attention

./: .gitignore  Dockerfile  README.md  debug_nan.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-experiments.txt  requirements.txt  temp_view.txt  test_masking.py  triton-env-full.yml
configs/: diffusion_toy.yaml  hyperparameters.md  transformer_toy.yaml
docs/: Untitled-2.md  codex_plan.md  codex_plan_20251021.md  codex_plan_20251022.md  codex_plan_20251117.md  codex_plan_20251118.md  codex_plan_20251217.md  codex_plan_20260126.md  codex_plan_20260126_audit_fixes.md  codex_plan_20260126_audit_notation.md  codex_plan_20260126_fixed.md  codex_plan_20260126_soft_trimmed_boltzmann_report.md  codex_plan_learning_diagnostics.md  improvements_matrix.md
legacy/: __init__.py
scripts/: bench_ska.py  cache_from_yaml.py  cache_ska_artifacts.py  cache_tokens.py  data_make_subsets.py  data_make_subsets_cifar.py  data_make_subsets_wmt16.py  demo_patch.py  make_stage_artifacts.py  prefetch_datasets.py  probe_model_forward.py  repro_runs.py  run_benchmarks.py  run_experiment.py  run_stageA_sweeps.py  run_stageB_sweeps.py  run_sweep.py  run_wandb_sweep.py  tmp_after.txt  tmp_before.txt  train_patchset_demo.py  train_seq2seq_text.py  train_seq2seq_text_banked.py  train_tiny_vit_banked.py  train_tiny_vit_cifar.py  train_tiny_vit_mnist.py  train_toy_diffusion.py  train_toy_diffusion_banked.py  train_toy_lm.py  train_toy_lm_banked.py  train_toy_seq2seq.py  train_toy_transformer.py  update_requirements.py
src/: __init__.py  train_toy_transformer.py
(+154 files in other folders)
